--- a/stopwatch.html
+++ b/stopwatch.html
@@ -5,12 +5,16 @@
 	</head>
 	
 	<body>
-		<h1><span id="clock_hours">00</span>:<span id="clock_minutes">00</span>:<span id="clock_seconds">00</span></h1>
+	<div>
+		<h1>
+			<span id="clock_hours">00</span>:<span id="clock_minutes">00</span>:<span id="clock_seconds">00</span>:<span id="clock_milliseconds">00</span>
+		</h1>
 		<button id="start">start</button>
 		<button id="stop">stop</button>
 		<button id="clear">clear</button>
 		
 		<script src="stopwatch.js"></script>
+	</div>
 	</body>
 
 </html>
