--- a/stopwatch.html
+++ b/stopwatch.html
@@ -7,9 +7,10 @@
 	
 	<body>
 		
-		<div id="sw1">
+		<div class="container">
+			<div id="sw1" class = "stopwatch">
 
-			<div>
+			<div class="time">
 
 				<span class="clock_hours">00</span>:<span class="clock_minutes">00</span>:<span class="clock_seconds">00</span>:<span class="clock_milliseconds">00</span>
 
@@ -18,31 +19,34 @@
 			<div>
 
 				<button class="start" onclick="stopWatch(sw1)">start</button>
-				<button class="stop">stop</button>
-				<button class="clear">clear</button>
+				<button class="stop" disabled="true">stop</button>
+				<button class="clear" disabled="true">clear</button>
 
 			</div>
 		
 		</div>
-		<br>
-		
-		<div id="sw2">
-
-			<div>
-
-				<span class="clock_hours">00</span>:<span class="clock_minutes">00</span>:<span class="clock_seconds">00</span>:<span class="clock_milliseconds">00</span>
-
-			</div>
-
-			<div>
-
-				<button class="start" onclick="stopWatch(sw2)">start</button>
-				<button class="stop">stop</button>
-				<button class="clear">clear</button>
-
-			</div>
-		
 		</div>
+
+		<div class="container">
+			<div id="sw2" class = "stopwatch">
+
+				<div class="time">
+
+					<span class="clock_hours">00</span>:<span class="clock_minutes">00</span>:<span class="clock_seconds">00</span>:<span class="clock_milliseconds">00</span>
+
+				</div>
+
+				<div>
+
+					<button class="start" onclick="stopWatch(sw2)">start</button>
+					<button class="stop" disabled="true">stop</button>
+					<button class="clear" disabled="true">clear</button>
+
+				</div>
+		
+			</div>
+		</div>
+		
 		
 		
 		<script type="text/javascript" src="stopwatch.js"></script>
